--- a/Client/packages.config
+++ b/Client/packages.config
@@ -5,4 +5,5 @@
   <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net452" />
   <package id="System.Data.SQLite.EF6" version="1.0.99.0" targetFramework="net452" />
   <package id="System.Data.SQLite.Linq" version="1.0.99.0" targetFramework="net452" />
+  <package id="Unofficial.BindingListView" version="1.2.0.0" targetFramework="net452" />
 </packages>
